--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,59 @@
 # Dependencies
 node_modules/
+.pnpm-debug.log*
 
-# Environment variables (VERY IMPORTANT!)
+# Build outputs
+dist/
+build/
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Editor directories and files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
 # OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
 # Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
+# Testing
+coverage/
+.nyc_output/
+test-results/
+playwright-report/
+playwright/.cache/
+
+# Temporary files
+*.tmp
+*.temp
+
+# Local development
+.cache/
+.parcel-cache/
+
+# TypeScript
+*.tsbuildinfo
+.DS_Store
+
