--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pomofocus",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha.1",
   "private": true,
   "type": "module",
   "description": "Production-ready Pomodoro timer with task management and integrations",
